+ replaced deprecated IncrementalTaskInputs by InputChanges + upgrade to JUnit5 + applied automatic code cleanup